--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-.bgdark {
-  background: #333;
-}
-
-.primary {
-  color: #26baff;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -13,248 +5,284 @@
           box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  color: #fff;
+  color: #333;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
+  font-family: nunito;
+  outline: none;
 }
 
-.darkLight {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  top: 10px;
-  right: 20px;
-  background: #fff;
-  border-radius: 30px;
-  height: 35px;
-  width: 100px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.details {
+  padding-left: 1rem;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 700;
+  margin: 10px 0;
+  -webkit-animation: blink .2s .2s 4 linear;
+          animation: blink .2s .2s 4 linear;
+  z-index: 999;
 }
 
-.darkLight .dark {
-  background: #333;
-  position: absolute;
-  padding: 5px;
-  height: 90%;
-  width: 60px;
-  -webkit-transform: translate(60%);
-          transform: translate(60%);
-  border-radius: 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
+@-webkit-keyframes blink {
+  from {
+    opacity: 0;
+  }
 }
 
-.darkLight .light {
-  background: #3f23bc;
-  position: absolute;
-  padding: 5px;
-  height: 90%;
-  width: 60px;
-  -webkit-transform: translate(8%);
-          transform: translate(8%);
-  border-radius: 30px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-}
-
-.container {
-  position: relative;
-  max-width: 1240px;
-  margin: auto;
+@keyframes blink {
+  from {
+    opacity: 0;
+  }
 }
 
 body {
-  margin: 0;
-  font-family: 'Poppins', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #3f23bc;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-h1 {
-  font-size: 3.5rem;
-  line-height: 1.2;
-}
-
-h2 {
-  font-size: 2.4rem;
-  line-height: 1.2;
-}
-
-h5 {
-  font-size: 1rems;
-  line-height: 1.2;
-}
-
-p {
-  font-size: 1.2rem;
-}
-
-.btn {
-  padding: 14px 32px;
-  border: 1px solid #26baff;
-  background: #26baff;
-  border-radius: 24px 4px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  min-width: 100%;
-  cursor: pointer;
-}
-
-.btn:hover {
-  -webkit-box-shadow: rgba(255, 255, 255, 0.25) 0px 8px 24px;
-          box-shadow: rgba(255, 255, 255, 0.25) 0px 8px 24px;
-}
-
-input {
-  padding: 12px 32px;
-  border: 1px solid #26baff;
-  background: transparent;
-  border-radius: 24px 4px;
-  font-size: 1rem;
-  margin-right: 0.8rem;
-  font-family: Poppins;
-}
-
-.container {
+  background: -webkit-gradient(linear, left top, right top, from(#d5a1ff), to(#e07de0));
+  background: linear-gradient(to right, #d5a1ff, #e07de0);
   height: 100vh;
+  margin: 2rem auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 5fr 1fr;
-      grid-template-rows: 1fr 5fr 1fr;
-      grid-template-areas: 'header' 'counter' 'footer';
-  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: auto;
 }
 
-.container .header {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: header;
+.fromCard {
+  background-color: #fff;
+  max-width: 700px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
-.container .counter {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: counter;
+.fromCard .pic {
+  padding: 2rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
+  background: #b53eec;
+}
+
+.fromCard .pic h2, .fromCard .pic h3 {
+  padding: 0 1rem;
+  color: #fff;
+  z-index: 3;
+}
+
+.fromCard .pic h2:nth-child(2), .fromCard .pic h3:nth-child(2) {
+  color: #3e1947;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.fromCard .pic img {
+  width: 120%;
+  position: absolute;
+  bottom: -10px;
+  left: -30px;
+}
+
+.fromCard form {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 2rem;
+  background: #fff;
+  text-align: center;
+  border-radius: .5rem;
+}
+
+.fromCard form .inputs {
+  margin-bottom: .5rem;
+}
+
+.fromCard form .inputs label {
+  display: block;
+  text-align: left;
+  font-size: .9rem;
+}
+
+.fromCard form .inputs input {
+  width: 100%;
+  border: 0.1rem solid rgba(51, 51, 51, 0.1);
+  border-radius: .5rem;
+  background: none;
+  padding: .5rem;
+  -webkit-box-shadow: 0 0 3px rgba(51, 51, 51, 0.1);
+          box-shadow: 0 0 3px rgba(51, 51, 51, 0.1);
+}
+
+.fromCard form i {
+  font-style: normal;
+  color: #333 !important;
+}
+
+.fromCard form .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-areas: 'minus val plus' '. reset .';
-  -ms-grid-rows: (1fr)[2];
-      grid-template-rows: repeat(2, 1fr);
-  justify-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  gap: 60px;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "fname lname" "email email" "password password" "rpassword rpassword";
 }
 
-.container .counter .plus {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: plus;
-}
-
-.container .counter .minus {
+.fromCard form .container .fname {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  grid-area: minus;
+  grid-area: fname;
 }
 
-.container .counter .reset {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: reset;
-}
-
-.container .counter h5 {
+.fromCard form .container .lname {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
-  grid-area: val;
-  font-size: 1.9rem;
+  grid-area: lname;
 }
 
-.container .footer {
+.fromCard form .container .email {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: email;
+}
+
+.fromCard form .container .password {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
-  grid-area: footer;
+  -ms-grid-column-span: 2;
+  grid-area: password;
+}
+
+.fromCard form .container .rpassword {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: rpassword;
+}
+
+.fromCard form > span {
+  display: block;
+  text-align: left;
+}
+
+.fromCard form > span i {
+  color: #333;
+  font-size: .9rem;
+}
+
+.fromCard form .btn {
+  background: #fff;
+  border-radius: .5rem;
+  border: none;
+  padding: .7rem;
+  margin: .5rem 0;
+  cursor: pointer;
+}
+
+.fromCard form .reg {
+  display: block;
+  width: 100%;
+  background: #a944fc;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.fromCard form .fb {
+  margin-left: .5rem;
+}
+
+.fromCard form .google, .fromCard form .fb {
+  border: 1px solid rgba(51, 51, 51, 0.438);
+}
+
+.fromCard form p {
+  color: #333;
+  text-align: center;
+}
+
+.fromCard form p i {
+  color: #c178fd !important;
+  cursor: pointer;
+}
+
+.fromCard form .sup {
+  margin-top: 0.3rem;
+  text-align: center;
+}
+
+.fromCard form .sup button {
+  display: inline-block;
+  width: 5px;
+  margin-right: 0.2rem;
+}
+
+.fromCard form i {
+  color: #ffb500;
 }
 
 @media screen and (max-width: 768px) {
-  h1 {
-    font-size: 2.1em;
-    line-height: 1.2;
+  .details {
+    background: rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    padding: 5px 10px;
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
+    border-radius: 5px;
   }
-  h2 {
-    font-size: 1.5em;
-    line-height: 1.2;
+  @-webkit-keyframes blink {
+    from {
+      opacity: 0;
+    }
   }
-  h5 {
-    font-size: 1.1em;
-    line-height: 1.2;
+  @keyframes blink {
+    from {
+      opacity: 0;
+    }
   }
-  p {
-    font-size: 1rem;
+  .fromCard {
+    max-width: 100%;
+    margin: 0 2rem;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start !important;
+        -ms-flex-pack: start !important;
+            justify-content: flex-start !important;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
   }
-  .btn {
-    width: 100%;
-    margin: 1rem 0;
+  .fromCard .pic {
+    overflow: hidden;
+    background: #b53eec url("./assets/mypic.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center 40px;
   }
-  input {
-    width: 100%;
+  .fromCard .pic .cont {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
   }
-  .counter {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
-    -webkit-box-pack: justify !important;
-        -ms-flex-pack: justify !important;
-            justify-content: space-between !important;
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
-    gap: 20px !important;
+  .fromCard .pic img {
+    display: none;
   }
-  .counter h5 {
-    font-size: 1.9rem;
+  .container {
+    display: none;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "fname fname" "lname lname" "email email" "password password" "rpassword rpassword" !important;
   }
 }
 /*# sourceMappingURL=index.css.map */
